# benchmark-whatever

./: CMakeLists.txt  Makefile  benchmark.h  countif.cpp  find.cpp  for_each.cpp  image.cpp  nearestneighbor.cpp  nearestneighbor3d.cpp  peakflop-stdsimd.cpp  peakflop.cpp  plot_csv.sh  range-constructors.cpp  simd_for_each.h  transform_reduce.cpp  typelist.h  typetostring.h
